--- a/_includes/8-scripts.html
+++ b/_includes/8-scripts.html
@@ -13,23 +13,24 @@
 <script src="https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-hash/v0.2.1/leaflet-hash.js"></script>
 <!-- omnivore -->
 <script src="https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.3.1/leaflet-omnivore.min.js"></script>
-<!-- leaflet-fullscreen -->
-<link rel="stylesheet" href="https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css" />
-<script src="https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js"></script>
 <!--end maps-->
 <!-- need to comine these map scripts-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/2.6.2/fuse.min.js"></script>
+<!--script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/2.6.2/fuse.min.js"></script-->
 <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.3.1/leaflet-omnivore.min.js'></script>
 <link rel="stylesheet" href="{{site.baseurl}}/assets/vendor/extra-markers/css/leaflet.extra-markers.min.css">
 <script src="{{site.baseurl}}/assets/vendor/extra-markers/src/assets/js/leaflet.extra-markers.js"></script>
 <link rel="stylesheet" href="{{site.baseurl}}/assets/vendor/leaflet-easybutton/easy-button.css">
 <script src="{{site.baseurl}}/assets/vendor/leaflet-easybutton/easy-button.js"></script>
+<script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
+<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
+<link rel="stylesheet" href="{{site.baseurl}}/assets/vendor/leaflet-fullscreen/Control.FullScreen.css">
+<script src="{{site.baseurl}}/assets/vendor/leaflet-fullscreen/Control.FullScreen.js"></script>
 <script>
   SimpleJekyllSearch({
     searchInput: document.getElementById('search-input'),
     resultsContainer: document.getElementById('results-container'),
-    json: '{{site.baseurl}}/trails.json',
-    searchResultTemplate: '<li><a href="{url}">{trail}</a><br />{description}</li>',
+    json: '/trails.json',
+    searchResultTemplate: '<li><a href="{url}">{trail}</a><br />{subtitle}</li>',
     fuzzy: true
   });
   $("#search-input").on('keyup', function(e) {
@@ -46,7 +47,7 @@
     return false;
   });
   {% endif %}
-  {% if page.type %}
+  {% if page.type or page.maptype %}
   /*Off canvas list menu*/
   $('[data-toggle="offcanvas"]').click(function () {
     console.log('click');
