--- a/_includes/9-overview-map.html
+++ b/_includes/9-overview-map.html
@@ -36,16 +36,32 @@ function buildMap() {
   var newZoom = L.control.zoom();
   var explore = document.getElementById('explore');
 
-  var roadTrails = new L.geoJson(null, {
-    color: '#3c763d',
-    weight: 8,
-    opacity: 0.7,
-  }).addTo(overviewmap);
-  omnivore.geojson('//www.ovrdc.org/apps/assets/data/trails/bikeways/OVRDC_Bikeways.geojson', null, roadTrails);
+  $.getJSON("/trails/data/ovrdc_trails.geojson", function(data) {
+      console.log('done loading trail data')
+    })
+    .done(function(data) {
+      var roadTrails = new L.geoJson(data, {
+        filter: function(feature) {
+          if (feature.properties.Status == 'Existing') {
+            return true
+          }
+        },
+        style: {
+          color: '#3c763d',
+          weight: 8,
+          opacity: 1,
+        }
+      }).addTo(overviewmap);
+    })
+    .fail(function() {
+      console.log('error loading trail data')
+    });
+
+/*  omnivore.geojson('//www.ovrdc.org/apps/assets/data/trails/bikeways/OVRDC_Bikeways.geojson', null, roadTrails);
 
   omnivore.geojson('//www.ovrdc.org/apps/assets/data/trails/bikeways/Gravel_Grinding_101_ridewithgps.geojson', null, roadTrails);
 
-  omnivore.geojson('//www.ovrdc.org/apps/assets/data/trails/bikeways/Ridgetop_Ramble_ridewithgps.geojson', null, roadTrails);
+  omnivore.geojson('//www.ovrdc.org/apps/assets/data/trails/bikeways/Ridgetop_Ramble_ridewithgps.geojson', null, roadTrails);*/
 
 
   explore.addEventListener('click', function() {
