--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,7 +7,7 @@
 {% include css/animate.min.css %}
 
 // Example Defaults
-// $base-font-family: Helvetica, Arial, sans-serif;
+//$base-font-family: Lato, Helvetica, Arial, sans-serif;
 // $base-font-size:   16px;
 // $small-font-size:  $base-font-size * 0.875;
 // $base-line-height: 1.5;
@@ -57,6 +57,9 @@ $theme-dark: #222;
 ;
 /*custom*/
 /*map*/
+.leaflet-bottom .leaflet-right {
+  width:100%;
+}
 .leaflet-popup-content-wrapper {
   border-radius: 4px!important;
 }
@@ -64,12 +67,23 @@ $theme-dark: #222;
 .extra-marker.extra-marker-svg img {
   margin-top: -38px;
 }
+.leaflet-popup-content {
+  font-family: Muli, Helvetica, Arial, sans-serif;
+}
 /*endmap*/
+#showlist {
+  margin-top: -40px;
+  margin-bottom: 20px;
+}
+#showlist button {
+  z-index:10;
+  border-radius:0;
+}
 #results-container {
   background: white;
   border-radius: 5px;
   position: absolute;
-  z-index: 9999;
+  z-index: 1;
   text-align: center;
   left: 15px;
   right: 15px;
@@ -91,11 +105,15 @@ ul.active {
   border: solid thin lightgray;
   margin-top:20px;
 }
+.navbar-brand {
+  font-size: 22px;
+}
 .nav > li > a {
-  padding: 15px 8px;
+  padding: 13px 8px;
+  font-size: 16px!important;
 }
 .nav > li > a .fa-lg {
-  line-height: 1.33em;
+  line-height: 22px;
 }
 .btn-sm-nav {
   padding: 4px 10px!important;
@@ -120,7 +138,7 @@ ul.active {
     width: 1540px;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .navbar-default.affix .btn-sm-nav:hover {
     color:white!important;
   }
@@ -156,6 +174,9 @@ footer {
  * Off Canvas
  * --------------------------------------------------
  */
+ #sidebar ul {
+   padding-left: 10px;
+ }
 @media screen and (max-width: 992px) {
   .row-offcanvas {
     position: relative;
@@ -214,4 +235,41 @@ footer {
     top: 0;
     width: 60%; /* 6 columns */
   }
+}
+/*change bootstrap navbar media query*/
+@media (max-width: 992px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
 }
