--- a/_includes/4-trails-list.html
+++ b/_includes/4-trails-list.html
@@ -26,7 +26,7 @@
         <div class="row">
         {% for trail in sorted_trails %}{% if trail.maptype == page.type %}
           <div class="col-lg-3 col-md-3 col-sm-3">
-            <img src="{{site.baseurl}}/trails/images/small/{{trail.img}}" class="img-thumbnail trail-list" alt="Responsive image">
+            <img src="{{site.url}}/trails/images/small/{{trail.img}}" class="img-thumbnail trail-list" alt="Responsive image">
           </div>
           <div class="col-lg-7 col-md-7 col-sm-9">
             <blockquote>
