--- a/_includes/4-trails-overview.html
+++ b/_includes/4-trails-overview.html
@@ -20,7 +20,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-4 text-center">
         <div class="service-box">
-          <img src="{{site.baseurl}}/assets/img/homepage-images/medium/bikepath.jpg" class="img-responsive" alt="Responsive image">
+          <img src="{{site.url}}/assets/img/homepage-images/medium/bikepath.jpg" class="img-responsive" alt="Responsive image">
           <h3>Bikeways</h3>
           <p class="text-muted">Southern Ohio has several paved and limestone bike paths.</p>
           <a class="btn btn-outline btn-xl btn-inverse" href="bikeways/">View the Trails</a>
@@ -28,7 +28,7 @@
       </div>
       <div class="col-lg-4 col-md-4 text-center">
         <div class="service-box">
-          <img src="{{site.baseurl}}/assets/img/homepage-images/medium/hiking.jpg" class="img-responsive" alt="Responsive image">
+          <img src="{{site.url}}/assets/img/homepage-images/medium/hiking.jpg" class="img-responsive" alt="Responsive image">
           <h3>Hiking & Bridle Trails</h3>
           <p class="text-muted">With over one hundred miles of hiking and backpacking trails, including the Buckeye Trail and the Shawnee Backpacking Trail, Southern Ohio has your fix when it comes to outdoor adventure.</p>
           <a class="btn btn-outline btn-xl btn-inverse" href="hiking-bridle/">View the Trails</a>
@@ -36,7 +36,7 @@
       </div>
       <div class="col-lg-4 col-md-4 text-center">
         <div class="service-box">
-          <img src="{{site.baseurl}}/assets/img/homepage-images/medium/mountainbiking.jpg" class="img-responsive" alt="Responsive image">
+          <img src="{{site.url}}/assets/img/homepage-images/medium/mountainbiking.jpg" class="img-responsive" alt="Responsive image">
           <!--i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i-->
           <h3>Mountain Bike Trails</h3>
           <p class="text-muted">Mountain Biking is trending in Southern Ohio, and there are many great rides to choose from.</p>
