--- a/_includes/6-overview-map-container.html
+++ b/_includes/6-overview-map-container.html
@@ -9,5 +9,5 @@
           </div>
       </div>
   </div>
-  <div id="largemap" style="position:realtive;width:100%;height:570px;"><!--img src="{{site.baseurl}}/assets/img/map-preview.jpg" /--></div>
+  <div id="largemap" style="position:realtive;width:100%;height:570px;"><!--img src="{{site.url}}/assets/img/map-preview.jpg" /--></div>
 </section>
