--- a/_includes/1-head.html
+++ b/_includes/1-head.html
@@ -3,21 +3,21 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+
+    {% include 1.1-opengraph.html %}
 
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato|Muli|Catamaran" rel="stylesheet">
 
     <!-- Plugin CSS -->
-    <!--link rel="stylesheet" href="{{site.baseurl}}/assets/css/animate.min.css" type="text/css"-->
-    <link rel="stylesheet" href="{{site.baseurl}}/assets/vendor/font-awesome/css/font-awesome.min.css">
-    <!--link rel="stylesheet" href="{{site.baseurl}}/assets/vendor/simple-line-icons/css/simple-line-icons.css"-->
-    <!--link rel="stylesheet" href="{{site.baseurl}}/assets/vendor/device-mockups/device-mockups.min.css"-->
+    <!--link rel="stylesheet" href="{{site.url}}/assets/css/animate.min.css" type="text/css"-->
+    <link rel="stylesheet" href="/assets/vendor/font-awesome/css/font-awesome.min.css">
+    <!--link rel="stylesheet" href="{{site.url}}/assets/vendor/simple-line-icons/css/simple-line-icons.css"-->
+    <!--link rel="stylesheet" href="{{site.url}}/assets/vendor/device-mockups/device-mockups.min.css"-->
 
-    <link href="{{site.baseurl}}/assets/css/main.css" rel="stylesheet">
+    <link href="/assets/css/main.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,7 +28,7 @@
 
     {% if site.addthis_id %}
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
-    <script type="text/javascript" src="{{site.baseurl}}/assets/s7.addthis.com/js/300/addthis_widget.js#pubid={{ site.addthis_id }}"></script>
+    <script type="text/javascript" src="{{site.url}}/assets/s7.addthis.com/js/300/addthis_widget.js#pubid={{ site.addthis_id }}"></script>
     {% endif %}
 
     {% if site.google_analytics != "" %}
@@ -46,5 +46,4 @@
       })();
     </script>
     {% endif %}
-    <link rel="stylesheet" href="{{site.baseurl}}/assets/vendor/mapkey/MapkeyIcons.css" />
 </head>
