--- a/_includes/1.1-opengraph.html
+++ b/_includes/1.1-opengraph.html
@@ -11,9 +11,9 @@
   <!--social og data-->
 
   <!-- Schema.org markup for Google+ -->
-  <meta itemprop="name" content="{{page.title}}">
+  <meta itemprop="name" content="{% if page.title %}{{page.title}}{% else %}{{site.title}}{% endif %}">
   <meta itemprop="description" content="{% if page.description %}{{ page.description }}{% elsif page.subtitle %}{{ page.subtitle }}{% else %}{{site.description}}{% endif %}">
-  <meta itemprop="image" content="{{ site.baseurl }}{% if page.feature-img %}/images/compressed/{{ page.feature-img }}{% elsif page.image %}/images/compressed/{{ page.image }}{% elsif page.header-img %}/images/compressed/{{ page.header-img }}{% elsif site.header-img %}/images/compressed/{{ site.header-img }}{% endif %}" />
+  <meta itemprop="image" content="{{ site.url }}{% if page.feature-img %}/images/compressed/{{ page.feature-img }}{% elsif page.image %}/images/compressed/{{ page.image }}{% elsif page.header-img %}/images/compressed/{{ page.header-img }}{% elsif site.header-img %}/assets/img/homepage-images/large/{{ site.header-img }}{% endif %}" />
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary">
@@ -23,15 +23,15 @@
   <meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% elsif page.subtitle %}{{ page.subtitle }}{% else %}{{site.description}}{% endif %}">
   <meta name="twitter:domain" content="getBounds.com" />
   <!-- Twitter summary card with large image must be at least 280x150px -->
-  <meta name="twitter:image:src" content="{{ site.baseurl }}{% if page.feature-img %}/images/compressed/{{ page.feature-img }}{% elsif page.image %}/images/compressed/{{ page.image }}{% elsif page.header-img %}/images/compressed/{{ page.header-img }}{% elsif site.header-img %}/images/compressed/{{ site.header-img }}{% endif %}" />
+  <meta name="twitter:image:src" content="{{ site.url }}{% if page.feature-img %}/images/compressed/{{ page.feature-img }}{% elsif page.image %}/images/compressed/{{ page.image }}{% elsif page.header-img %}/images/compressed/{{ page.header-img }}{% elsif site.header-img %}/assets/img/homepage-images/large/{{ site.header-img }}{% endif %}" />
 
   <!-- Open Graph data -->
-  <meta property="og:title" content="{{ page.title }}" />
+  <meta property="og:title" content="{% if page.title %}{{page.title}}{% else %}{{site.title}}{% endif %}" />
   <meta property="og:type" content="{% if page.homepage == true %}website{% else %}article{% endif %}" />
   <meta property="og:site_name" content="{{ site.title }}" />
-  <meta property="og:image" content="{{ site.baseurl }}{% if page.feature-img %}/images/compressed/{{ page.feature-img }}{% elsif page.image %}/images/compressed/{{ page.image }}{% elsif page.header-img %}/images/compressed/{{ page.header-img }}{% elsif site.header-img %}/images/compressed/{{ site.header-img }}{% endif %}" />
+  <meta property="og:image" content="{{ site.url }}{% if page.feature-img %}/images/compressed/{{ page.feature-img }}{% elsif page.image %}/images/compressed/{{ page.image }}{% elsif page.header-img %}/images/compressed/{{ page.header-img }}{% elsif site.header-img %}/assets/img/homepage-images/large/{{ site.header-img }}{% endif %}" />
   <meta property="og:description" content="{% if page.description %}{{ page.description }}{% elsif page.subtitle %}{{ page.subtitle }}{% else %}{{site.description}}{% endif %}" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-  <link property="og:url" content="{{ site.baseurl }}{{ page.url | remove:'index.html' }}/" />
+  <link property="og:url" content="{{ site.url }}{{ page.url | remove:'index.html' }}/" />
   <meta property="article:tag" content="{% for tag in page.tags%}{{page.tag}}{%endfor%}" />
   {% if page.date %}<meta property="article:published_time" content="{{page.date}}" />{%endif%}
