--- a/_includes/1-head.html
+++ b/_includes/1-head.html
@@ -28,7 +28,7 @@
 
     {% if site.addthis_id %}
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
-    <script type="text/javascript" src="{{site.url}}/assets/s7.addthis.com/js/300/addthis_widget.js#pubid={{ site.addthis_id }}"></script>
+    <script type="text/javascript" src="/assets/s7.addthis.com/js/300/addthis_widget.js#pubid={{ site.addthis_id }}"></script>
     {% endif %}
 
     {% if site.google_analytics != "" %}
@@ -46,4 +46,5 @@
       })();
     </script>
     {% endif %}
+    <style>{% if page.homepage == true %}{% else %}@media (min-width: 768px) {header{min-height: 33%;} header .header-content {height: 33vh;}}{% endif %}</style>
 </head>
