--- a/_includes/3-header.html
+++ b/_includes/3-header.html
@@ -1,4 +1,4 @@
-<header>
+{% if page.homepage == true %}<header>{% else %}<header class="page">{% endif %}
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
