--- a/_includes/2-nav.html
+++ b/_includes/2-nav.html
@@ -15,7 +15,7 @@
                   <a class="page-scroll" href="/bikeways">Bikeways</a>
               </li>
                 <li>
-                    <a class="page-scroll" href="/hiking-bridle">Hiking & Bridle</a>
+                    <a class="page-scroll" href="/parks">Parks</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="/mountain-biking">Mountain Biking</a>
