--- a/_includes/4-trails-overview.html
+++ b/_includes/4-trails-overview.html
@@ -29,9 +29,9 @@
       <div class="col-lg-4 col-md-4 text-center">
         <div class="service-box">
           <img src="/assets/img/homepage-images/medium/hiking.jpg" class="img-responsive" alt="Responsive image">
-          <h3>Hiking & Bridle Trails</h3>
+          <h3>Parks, Forests & Wildlife Areas</h3>
           <p class="text-muted">With over one hundred miles of hiking and backpacking trails, including the Buckeye Trail and the Shawnee Backpacking Trail, Southern Ohio has your fix when it comes to outdoor adventure.</p>
-          <a class="btn btn-outline btn-xl btn-inverse" href="hiking-bridle/">View the Trails</a>
+          <a class="btn btn-outline btn-xl btn-inverse" href="parks/">View the Parks</a>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 text-center">
