--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,6 +5,8 @@
 
 {% include css/bootstrap.min.css %}
 {% include css/animate.min.css %}
+{% include css/font-awesome.min.css %}
+{% include mapzen/mapzen.min.css %}
 
 // Example Defaults
 //$base-font-family: Lato, Helvetica, Arial, sans-serif;
