--- a/_includes/4-parks-detailed.html
+++ b/_includes/4-parks-detailed.html
@@ -9,8 +9,8 @@
       <a href="{{site.url}}/bikeways/"><i class="fa fa-reply"></i>&nbsp;Bikeways</a>
       {% elsif page.maptype == "mountain" %}
       <a href="{{site.url}}/mountain-biking/"><i class="fa fa-reply"></i>&nbsp;Mountain Bike Trails</a>
-      {% elsif page.maptype == "hiking" or page.maptype == "bridle" %}
-      <a href="{{site.url}}/hiking-bridle/"><i class="fa fa-reply"></i>&nbsp;Hiking & Bridle Trails</a>
+      {% elsif page.maptype == "park"%}
+      <a href="{{site.url}}/parks/"><i class="fa fa-reply"></i>&nbsp;Parks</a>
       {% endif %}
     </h4>
     <div class="row row-offcanvas row-offcanvas-right">
@@ -46,8 +46,8 @@
             Bikeways
             {% elsif page.maptype == "mountain" %}
             Mountain Bike Trails
-            {% elsif page.maptype == "hiking" or page.maptype == "bridle" %}
-            Hiking & Bridle Trails
+            {% elsif page.maptype == "park" or page.maptype == "park" %}
+            Parks
             {% endif %}
           </h4>
           {% assign sorted_trails = site.data.ovrdc_trails | sort:"Name" %}
