--- a/_includes/4-parks-list.html
+++ b/_includes/4-parks-list.html
@@ -1,7 +1,7 @@
 <section id="content" class="container">
   <div class="row">
     <div class="col-lg-12 text-center">
-      <h2 class="section-heading">Explore the Trails</h2>
+      <h2 class="section-heading">Explore the Parks</h2>
     </div>
     <div class="col-lg-3 text-center"></div>
     <div class="col-lg-6 text-center">
@@ -16,29 +16,23 @@
   </div>
 </section>
 <div id="showlist"class="container visible-sm visible-xs">
-  <button type="button" class="btn btn-outline btn-xs" data-toggle="offcanvas">Trail List</button>
+  <button type="button" class="btn btn-outline btn-xs" data-toggle="offcanvas">Parks List</button>
 </div>
 <div class="animated">
   <div class="container">
     <div class="row row-offcanvas row-offcanvas-right">
       <div class="col-lg-9 col-md-9 col-sm-12">
-        {% assign sorted_trails = site.data.ovrdc_trails | sort:"Name" %}
+        {% assign sorted_trails = site.data.ovrdc_parks | sort:"NAME" %}
         <div class="row">
         {% for trail in sorted_trails %}{% if trail.maptype == page.type %}
           <div class="col-lg-3 col-md-3 col-sm-3">
-            <img src="/trails/images/small/{{trail.img}}" class="img-thumbnail trail-list" alt="Responsive image">
+            <img src="/trails/images/small/adena-trail-01.jpg" class="img-thumbnail trail-list" alt="Responsive image">
           </div>
-          <div class="col-lg-7 col-md-7 col-sm-9">
+          <div class="col-lg-7 col-md-7 col-sm-9" style="min-height:200px;">
             <blockquote>
               <h3 class="section-heading trail-list">
-                <a href="/trails/{{trail.Name |slugify}}">{{trail.Name}}</a>
+                <a href="/parks/{{trail.NAME |slugify}}">{{trail.NAME}}</a>
               </h3>
-              <p>{{trail.subtitle}}<br>
-              <span class="text-muted">Length: {{trail.length}} miles<br>
-              Surface: {{trail.surface}}<br>
-              Difficulty:<br>
-              Directions: <br>
-              Counties: <br><span></p>
             </blockquote>
           </div>
         {%endif%}{%endfor%}
@@ -54,7 +48,7 @@
             Parks
             {% endif %}
           </h4>
-          {% for trail in sorted_trails %}{% if trail.maptype == page.type %}<li><a href="/trails/{{trail.Name | slugify}}/">{{trail.Name}}</a></li>{%endif%}{%endfor%}
+          {% for trail in sorted_trails %}{% if trail.maptype == page.type %}<li><a href="/trails/{{trail.NAME | slugify}}/">{{trail.NAME}}</a></li>{%endif%}{%endfor%}
         </ul>
       </div>
     </div>
