--- a/_includes/8-scripts.html
+++ b/_includes/8-scripts.html
@@ -1,13 +1,12 @@
+<!-- Custom Fonts -->
+<link href="https://fonts.googleapis.com/css?family=Lato|Muli|Catamaran" rel="stylesheet" />
+<link href="/assets/css/main.css" rel="stylesheet" />
 <!--Main Javascript and jQuery see _includes/js-->
-
 <script type='text/javascript' src="{{site.baseurl}}/assets/js/main.js"></script>
 <!-- Maps Javascript -->
 <!--Leaflet
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
 <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script-->
-<!--mapzen.js -->
-<link rel="stylesheet" href="https://mapzen.com/js/mapzen.css">
-<script src="https://mapzen.com/js/mapzen.min.js"></script>
 <!--script src='https://api.mapbox.com/mapbox.js/v3.0.1/mapbox.js'></script>
 <link href='https://api.mapbox.com/mapbox.js/v3.0.1/mapbox.css' rel='stylesheet' /-->
 <script src="https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-hash/v0.2.1/leaflet-hash.js"></script>
@@ -25,12 +24,14 @@
 <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
 <link rel="stylesheet" href="{{site.baseurl}}/assets/vendor/leaflet-fullscreen/Control.FullScreen.css">
 <script src="{{site.baseurl}}/assets/vendor/leaflet-fullscreen/Control.FullScreen.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-omnivore/0.3.4/leaflet-omnivore.min.js"></script>
+<script src="//www.ovrdc.org/apps/assets/cssjs/Leaflet.VectorGrid/Leaflet.VectorGrid.bundled.js"></script>
 <script>
   SimpleJekyllSearch({
     searchInput: document.getElementById('search-input'),
     resultsContainer: document.getElementById('results-container'),
     json: '/trails.json',
-    searchResultTemplate: '<li><a href="{url}">{trail}</a><br />{subtitle}</li>',
+    searchResultTemplate: '<li><a href="{url}">{{site.baseurl}}/{trail}</a><br />{subtitle}</li>',
     fuzzy: true
   });
   $("#search-input").on('keyup', function(e) {
